Set fixed top on mobile a remove text centering

--- a/app/assets/stylesheets/cookies_eu.scss
+++ b/app/assets/stylesheets/cookies_eu.scss
@@ -22,9 +22,8 @@ $cookies-eu-mobile: 'max-width: 767px';
 
   @media ($cookies-eu-mobile) {
     font-size: 14px;
-    text-align: center;
-
-    position: initial;
+    bottom: auto;
+    top: 0;
   }
 
   .cookies-eu-content-holder {
